--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,11 +11,11 @@
     <title>Sprout</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="public/css/freelancer.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/freelancer.css" rel="stylesheet" type="text/css">
 
     <!-- Fonts -->
-    <link href="public/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 </head>
