--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -82,55 +82,27 @@
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                        <div class="jumbotron" style="background-color:#d2850b;color:#FFFFFF;width:400px;height:400px">
+                            <h3>Development</h3>
+                            <p>Are you interested in creating webapps?</p>
                         </div>
-                        <input id="bigbutton" type="submit" value="Development" />
                        <!-- <img src="img/portfolio/cabin.png" class="img-responsive" alt="" /> -->
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                        <div class="jumbotron" style="background-color:#47a447;color:#FFFFFF;width:400px;height:400px">
+                            <h3>Intro to CS</h3>
+                            <p>Are you new to CS?</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                        <div class="jumbotron" style="background-color:#d2322d;color:#FFFFFF;width:400px;height:400px">
+                            <h3>Sectors</h3>
+                            <p>Are you interested in learning about the real-life applications of CS?</p>
                         </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
                     </a>
                 </div>
             </div>
