Added to color array

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -70,7 +70,7 @@
         </div>
     </header>
 
-<!-- BUTTONS -->
+<!-- OPTION BUTTONS -->
     <section id="yourpath">
         <div class="container">
             <div class="row">
