--- a/app/views/googleplus.scala.html
+++ b/app/views/googleplus.scala.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <div id="buttons">
-      <label> <input id="query" value='' type="text"/><button id="search-button" onclick="search()">Search</button></label>
+      <label> <input id="query" value='' type="text"/><button id="search-button" disabled onclick="searchplus()">Search</button></label>
     </div>
     <div id="search-container">
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="/assets/javascripts/auth.js"></script>
-    <script src="/assets/javascripts/search.js"></script>
+    <script src="/assets/javascripts/authplus.js"></script>
+    <script src="/assets/javascripts/searchplus.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
   </body>
 </html>
