update youtube scalar

--- a/app/views/youtube.scala.html
+++ b/app/views/youtube.scala.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="buttons">
-      <label> <input id="query" value='cats' type="text"/><button id="search-button" disabled onclick="search()">Search</button></label>
+      <label> <input id="query" value='' type="text"/><button id="search-button" disabled onclick="search()">Search</button></label>
     </div>
     <div id="search-container">
     </div>
