Dynamic page building

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,6 +18,13 @@
     <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
+    <script src="/assets/js/jquery-1.10.2.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="/assets/js/classie.js"></script>
+    <script src="/assets/js/cbpAnimatedHeader.js"></script>
+    <script src="/assets/js/mustache.js"></script>
+    <script type='text/javascript' src='/assets/javascripts/page.js'></script>
+
 </head>
 
 <body id="page-top" class="index">
@@ -60,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 id='pageTitle'>Choose your new path</h2>
+                    <h2 id='pageTitle'>{{pageView.title}}</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -302,14 +309,6 @@
         </div>
     </div>
 -->
-
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
-    <script src="js/freelancer.js"></script>
-    <script type='text/javascript' src='assets/javascripts/page.js'></script>
 
 </body>
 
