Added search query string

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 id='pageTitle'>{{pageView.title}}</h2>
+                    <h2 id='pageTitle'>Choose your new path</h2>
                     <hr class="star-primary">
                 </div>
             </div>
