Navigation fix and languages page added

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -24,6 +24,7 @@
     <script src="/assets/js/cbpAnimatedHeader.js"></script>
     <script src="/assets/js/mustache.js"></script>
     <script type='text/javascript' src='/assets/javascripts/page.js'></script>
+    <script type='text/javascript' src='/assets/javascripts/pageinfo.js'></script>
 
 </head>
 
@@ -73,7 +74,7 @@
             </div>
             <div class="row"  id="options-row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#developmentModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('development')">
+                    <a href="#developmentModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('Development')">
                         <div class="jumbotron" style="background-color:#d2850b;color:#FFFFFF;width:400px;height:400px">
                             <h3>Development</h3>
                             <p>Are you interested in creating applications?</p>
@@ -82,7 +83,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#introModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('intro')">
+                    <a href="#introModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('Intro to CS')">
                         <div class="jumbotron" style="background-color:#47a447;color:#FFFFFF;width:400px;height:400px">
                             <h3>Intro to CS</h3>
                             <p>Are you new to CS?</p>
@@ -90,7 +91,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#sectorsModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('sectors')">
+                    <a href="#sectorsModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('Sectors')">
                         <div class="jumbotron" style="background-color:#d2322d;color:#FFFFFF;width:400px;height:400px">
                             <h3>Sectors</h3>
                             <p>Are you interested in learning about the real-life applications of CS?</p>
