--- a/app/views/youtube.scala.html
+++ b/app/views/youtube.scala.html
@@ -9,6 +9,11 @@
     </div>
     <div id="search-container">
     </div>
+
+    <button id="search-button" onclick="googleSearch('mobile+dev','http%3A%2F%2Fwww.coursera.org%2F')">Search</button>
+    <div>
+    <a id="google-search">link</a>
+    </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="/assets/javascripts/auth.js"></script>
     <script src="/assets/javascripts/search.js"></script>
