build google links from query

--- a/app/views/youtube.scala.html
+++ b/app/views/youtube.scala.html
@@ -5,14 +5,15 @@
   </head>
   <body>
     <div id="buttons">
-      <label> <input id="query" value='' type="text"/><button id="search-button" onclick="search()">Search</button></label>
+      <label> <input id="query" value='' type="text"/><button id="search-button" onclick="youtubeSearch()">Search</button></label>
     </div>
     <div id="search-container">
     </div>
 
-    <button id="search-button" onclick="googleSearch('mobile+dev','http%3A%2F%2Fwww.coursera.org%2F')">Search</button>
+    <button id="search-button2" onclick="googleSearch('mobile+dev')">Search</button>
     <div>
-    <a id="google-search">link</a>
+    <a id="coursera" href=#>test</a>
+    <a id="udacity" href=#>test</a>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="/assets/javascripts/auth.js"></script>
