--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,10 +22,8 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="/assets/js/classie.js"></script>
     <script src="/assets/js/cbpAnimatedHeader.js"></script>
-    <script src="/assets/js/mustache.js"></script>
     <script type='text/javascript' src='/assets/javascripts/page.js'></script>
     <script type='text/javascript' src='/assets/javascripts/pageinfo.js'></script>
-
 </head>
 
 <body id="page-top" class="index">
@@ -151,6 +149,11 @@
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
+    <script src="/assets/javascripts/auth.js"></script>
+    <script src="/assets/javascripts/search.js"></script>
+    <script src="/assets/javascripts/authplus.js"></script>
+    <script src="/assets/javascripts/searchplus.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
 
 </body>
 
