--- a/app/views/createpath.scala.html
+++ b/app/views/createpath.scala.html
@@ -1,1 +1,164 @@
-create path page
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Create your path</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/freelancer.css" rel="stylesheet" type="text/css">
+
+    <!-- Fonts -->
+    <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+    <script src="/assets/js/jquery-1.10.2.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="/assets/js/classie.js"></script>
+    <script src="/assets/js/cbpAnimatedHeader.js"></script>
+    <script src="/assets/js/mustache.js"></script>
+    <script type='text/javascript' src='/assets/javascripts/page.js'></script>
+
+    <script>
+
+	    function display(e){
+	    	if (e.checked)
+	        	document.getElementById('yourDiv').style.display = 'block';
+		    else
+		        document.getElementById('yourDiv').style.display = 'none';
+	    }
+
+    </script>
+
+</head>
+
+
+<body id="page-top" class="index">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#page-top">Sprout</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#yourpath">Your Path</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">About</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+<!-- OPTION BUTTONS -->
+<section id="yourpath">
+<form class="form-horizontal">
+
+	<fieldset>
+
+	<!-- Form Name -->
+	<legend>Create Path</legend>
+
+	<!-- Text input & Number of Sub-topics-->
+	<div class="control-group">
+	  
+	  <div class="controls">
+	  	<label class="control-label" for="title">Title:</label>
+	    <input id="title" name="title" type="text" placeholder="title" class="input-xlarge">
+	  </div>
+
+	  <br>
+
+	  <label for="createpath">
+	            How many subtopics would you like to create? 
+	            <input type="number" name="createpath" id="createpath"
+	                min="1" max="10" step="1" value="1">
+	  </label>
+
+	</div>
+
+	<!-- Button -->
+	<div class="control-group">
+	  
+	  <label class="control-label" for="submit"></label>
+	  <div class="controls">
+	    <button id="submit" name="submit" class="btn btn-primary">Create</button>
+	  </div>
+
+	</div>
+
+	</fieldset>
+</form>
+
+</section>
+
+<!-- Footer Info -->
+    <footer class="text-center">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-4">
+                        <h3>Location</h3>
+                        <p>Google
+                            <br>Mountain View, CA 00000</p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>Follow our community</h3>
+                        <ul class="list-inline">
+                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                            </li>
+                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    
+                    
+                </div>
+            </div>
+        </div>
+        <div class="footer-below">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        Copyright &copy; 2014 - Sprout
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div class="scroll-top page-scroll visible-xs visble-sm">
+        <a class="btn btn-primary" href="#page-top">
+            <i class="fa fa-chevron-up"></i>
+        </a>
+    </div>
+
+</html>
