--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -63,7 +63,7 @@
 
 <!-- OPTION BUTTONS -->
     <section id="yourpath">
-        <div class="container">
+        <div class="container" id="path-container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 id='pageTitle'>Choose your new path</h2>
