--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,6 +17,7 @@
     <!-- Fonts -->
     <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+     <script src="https://apis.google.com/js/client.js"></script>
 
     <script src="/assets/js/jquery-1.10.2.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -24,10 +25,10 @@
     <script src="/assets/js/cbpAnimatedHeader.js"></script>
     <script type='text/javascript' src='/assets/javascripts/pageinfo.js'></script>
     <script type='text/javascript' src='/assets/javascripts/page.js'></script>
-    <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
-    <script src="/assets/javascripts/search.js"></script>
     <script src="/assets/javascripts/auth.js"></script>
     <script src="/assets/javascripts/authplus.js"></script>
+   
+
 </head>
 
 <body id="page-top" class="index">
@@ -153,6 +154,7 @@
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
+
 </body>
 
 </html>
