--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,7 +17,7 @@
     <!-- Fonts -->
     <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    
+
      <script src="https://apis.google.com/js/client.js"></script>
 
     <script src="/assets/js/jquery-1.10.2.js"></script>
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Sprout</a>
+                <a class="navbar-brand" href="/">Sprout</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
