--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,6 +10,10 @@
 
     <title>Sprout</title>
 
+    <script src="/assets/js/jquery-1.10.2.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="/assets/js/classie.js"></script>
+
     <!-- Bootstrap Core CSS -->
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/assets/css/freelancer.css" rel="stylesheet" type="text/css">
@@ -17,17 +21,16 @@
     <!-- Fonts -->
     <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <!-- 3rd Party APIs -->
+    <script src="https://apis.google.com/js/client.js"></script>
+    <script src="/assets/javascripts/auth.js"></script>
+    <script src="/assets/javascripts/authplus.js"></script>
 
-     <script src="https://apis.google.com/js/client.js"></script>
-
-    <script src="/assets/js/jquery-1.10.2.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="/assets/js/classie.js"></script>
+   
     <script src="/assets/js/cbpAnimatedHeader.js"></script>
     <script type='text/javascript' src='/assets/javascripts/pageinfo.js'></script>
     <script type='text/javascript' src='/assets/javascripts/page.js'></script>
-    <script src="/assets/javascripts/auth.js"></script>
-    <script src="/assets/javascripts/authplus.js"></script>
+
    
 
 </head>
