--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,27 +9,29 @@
     <meta name="author" content="">
 
     <title>Sprout</title>
-
-    <script src="/assets/js/jquery-1.10.2.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="/assets/js/classie.js"></script>
-
     <!-- Bootstrap Core CSS -->
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/assets/css/freelancer.css" rel="stylesheet" type="text/css">
 
-    <!-- Fonts -->
+     <!-- Fonts -->
     <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+    <script src="/assets/js/jquery-1.10.2.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="/assets/js/cbpAnimatedHeader.js"></script>
+    <script src="/assets/js/classie.js"></script>
+
+
+
     <!-- 3rd Party APIs -->
     <script src="https://apis.google.com/js/client.js"></script>
     <script src="/assets/javascripts/auth.js"></script>
     <script src="/assets/javascripts/authplus.js"></script>
 
-   
-    <script src="/assets/js/cbpAnimatedHeader.js"></script>
     <script type='text/javascript' src='/assets/javascripts/pageinfo.js'></script>
     <script type='text/javascript' src='/assets/javascripts/page.js'></script>
+
 
    
 
@@ -90,7 +92,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#introModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('Intro to CS')">
+                    <a href="#introModal" class="portfolio-link" data-toggle="modal" onload="hide_reveal('portfolio-link')"  onclick="updatePage('Intro to CS')">
                         <div class="jumbotron" style="background-color:#47a447;color:#FFFFFF;width:350px;height:350px">
                             <h3>Intro to CS</h3>
                             <p>Are you new to CS?</p>
