--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -24,21 +24,9 @@
 
 
 
-    <!-- 3rd Party APIs -->
-    <script src="https://apis.google.com/js/client.js"></script>
-    <script src="/assets/javascripts/auth.js"></script>
-    <script src="/assets/javascripts/authplus.js"></script>
-
-    <script type='text/javascript' src='/assets/javascripts/pageinfo.js'></script>
-    <script type='text/javascript' src='/assets/javascripts/page.js'></script>
-
-
-   
-
 </head>
 
 <body id="page-top" class="index">
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -77,38 +65,19 @@
         <div class="container" id="path-container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 id='pageTitle'>Choose your new path</h2>
+                    <h2 id='pageTitle'>Welcome</h2>
                     <hr class="star-primary">
+                    <a href="/" class="portfolio-link" data-toggle="modal">
+                    <div class="jumbotron col-centered" href="/" style="background-color:#47a447;color:#FFFFFF;width:850px;height:350px">
+                        <h2>About Sprout</h2>
+                            <p>It is hard to answer to questions you do not yet know how to ask, especially in the tech field. Instead, Sprout provides pre-defined "guideline" questions (we call sprouts) posed by seasoned developers to help send you on a path to a streamlined solution that fits you. We know one-solution does not fit all, so we allow you to create your own sprouts after getting stuck yourself or to specifically serve a population you know and understand. </p>
+                        <h3>Click To Begin</h3>
+                    </div>
+                    </a>
                 </div>
+
             </div>
-            <div class="row"  id="options-row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#developmentModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('Development')">
-                        <div class="jumbotron" style="background-color:#d2850b;color:#FFFFFF;width:350px;height:350px">
-                            <h3>Development</h3>
-                            <p>Are you interested in creating applications?</p>
-                        </div>
-                       <!-- <img src="img/portfolio/cabin.png" class="img-responsive" alt="" /> -->
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#introModal" class="portfolio-link" data-toggle="modal"  onclick="updatePage('Intro to CS')">
-                        <div class="jumbotron" style="background-color:#47a447;color:#FFFFFF;width:350px;height:350px">
-                            <h3>Intro to CS</h3>
-                            <p>Are you new to CS?</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#sectorsModal" class="portfolio-link" data-toggle="modal" onclick="updatePage('Sectors')">
-                        <div class="jumbotron" style="background-color:#d2322d;color:#FFFFFF;width:350px;height:350px">
-                            <h3>Sectors</h3>
-                            <p>Are you interested in learning about the real-life applications of CS?</p>
-                        </div>
-                    </a>
-                </div>
             </div>
-        </div>
     </section>
 
     <footer class="text-center">
