--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -68,7 +68,7 @@
                     <h2 id='pageTitle'>Welcome</h2>
                     <hr class="star-primary">
                     <a href="/" class="portfolio-link" data-toggle="modal">
-                    <div class="jumbotron col-centered" href="/" style="background-color:#47a447;color:#FFFFFF;width:850px;height:350px">
+                    <div class="jumbotron col-centered" href="/" style="background-color:#47a447; margin-left:auto;margin-right:auto;color:#FFFFFF;width:850px;height:350px">
                         <h2>About Sprout</h2>
                             <p>It is hard to answer to questions you do not yet know how to ask, especially in the tech field. Instead, Sprout provides pre-defined "guideline" questions (we call sprouts) posed by seasoned developers to help send you on a path to a streamlined solution that fits you. We know one-solution does not fit all, so we allow you to create your own sprouts after getting stuck yourself or to specifically serve a population you know and understand. </p>
                         <h3>Click To Begin</h3>
