added sprout-builder page

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -60,7 +60,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#yourpath">Your Path</a>
+                        <a href="/sprout-builder">New Sprout</a>
                     </li>
                     <li class="page-scroll">
                         <a href="about">About</a>
